--- a/styles/_tabs.scss
+++ b/styles/_tabs.scss
@@ -31,7 +31,7 @@ $tabs-base-color: #8e44ad;
     cursor: pointer;
     position: relative;
     top: 4px; 
-    transition:all 0.2s ease-in-out;
+    transition:background 0.1s ease-in-out;
     border-radius: 3px;
     &:hover {
       background: darken($tabs-base-color, 10);
@@ -72,7 +72,7 @@ p.link {
     padding: 5px 10px;
     margin: 0 5px;
     background-color: darken($tabs-base-color, 15);
-    transition: all 0.2s ease-in;
+    transition:background 0.1s ease-in;
     &:hover {
       background-color: darken($tabs-base-color, 20);
     }
